# juntando-os-dados-e-adicionando-o-streamlit-pagaos

./: .gitignore  README.md  pyproject.toml  sample.json
algoritmos_extracao/: dani.py  dudu.py  maria.py  mount_json.py  streamlit.py
